2007-06-14  Christian Persch  <chpe@gnome.org>

	* embed/mozilla/GeckoPrintService.cpp:
	* embed/mozilla/GeckoPrintSession.cpp:
	* embed/mozilla/GeckoPrintSession.h:

	Set the print as cancelled in the print settings too, see
	https://bugzilla.mozilla.org/show_bug.cgi?id=253926.

2007-06-10  Christian Persch  <chpe@gnome.org>

	* data/default-prefs-common.js:

	Disable PAPI too.

2007-06-07  Diego Escalante Urrelo  <diegoe@gnome.org>

	* src/ephy-history-window.c:
	* src/bookmarks/ephy-bookmarks-editor.c:

	Adds SelectAll stock icon.

2007-06-05  Diego Escalante Urrelo  <diegoe@gnome.org>

	* src/ephy-history-window.c
	* src/bookmarks/ephy-bookmarks-editor.c
	* data/ui/epiphany-history-window-ui.xml
	* data/ui/epiphany-bookmark-editor-ui.xml:

	Assign control+T as default delete shortcut. Also move the Delete item
	to Edit menu. Bug #351100.

2007-06-05  Diego Escalante Urrelo  <diegoe@gnome.org>

	* embed/mozilla/EphyAboutModule.cpp:

	Last commit reverted.

2007-06-05  Diego Escalante Urrelo  <diegoe@gnome.org>

	* embed/mozilla/EphyAboutModule.cpp:

	Change the "The page was not fully loaded when the crash ocurred"
	message to something better. Patch by Thomas Presthus. Bug #433796.

2007-06-05  Diego Escalante Urrelo  <diegoe@gnome.org>

	* src/ephy-go-action.c:

	Fix go button behaviour to react to button-release-event and not
	button-press-event. Patch by Sebastiaan Samyn. Bug #441419.

2007-06-05  Diego Escalante Urrelo  <diegoe@gnome.org>

	* src/ephy-window.c:

	Added GTK_STOCK_SELECT_ALL to SelectAll action. 

2007-06-05  Christian Persch  <chpe@gnome.org>

	* doc/reference/Makefile.am:
	
	Fix docs build on xulrunner trunk.

2007-06-05  Wouter Bolsterlee  <wbolster@svn.gnome.org>

	* data/about.ini:
	
	Shameless plug: added Reinout van Schouwen and myself.

2007-06-05  Jared Moore <cornflake.pirate@gmail.com>

	Reviewed by: Christian Persch <chpe@gnome.org>
	Committed by: Wouter Bolsterlee <wbolster@gnome.org>

	* data/ui/epiphany-ui.xml:
