@@ -1,6 +1,11 @@
 SUBDIRS = reference
 
+NULL =
+
 man_MANS = epiphany.1
 
 EXTRA_DIST = 		\
-	$(man_MANS)
+	$(man_MANS)	\
+	bookmarks.txt	\
+	debugging.txt	\
+	$(NULL)
