@@ -1,3 +1,9 @@
+2007-06-16  Christian Persch  <chpe@gnome.org>
+
+	* doc/Makefile.am:
+
+	Add debugging.txt to EXTRA_DIST.
+
 2007-06-14  Christian Persch  <chpe@gnome.org>
 
 	* embed/mozilla/GeckoPrintService.cpp:
